--- a/Source/Web365/Views/Home/taiungdung.cshtml
+++ b/Source/Web365/Views/Home/taiungdung.cshtml
@@ -33,7 +33,9 @@
                     <div class="images__download__qr">
                         <img src='~/Content/GStoreWeb/images/img/images/Appstore.png' />
                     </div>
-                    <button class='btn__close'><i class="fas fa-times"style="margin-right:2px;"></i></button>
+                    <button class='btn__close'>
+                        <i class="far fa-times"></i>
+                    </button>
                 </div>
                 <!-- adr -->
                 <div class="download__links download__links-2">
@@ -47,7 +49,9 @@
                     <div class="images__download__qr">
                         <img src='Content/GStoreWeb/images/img/images/Andr.png' />
                     </div>
-                    <button class='btn__close btn__close-2'><i class="fas fa-times" style="margin-right:2px;"></i></button>
+                    <button class='btn__close btn__close-2'>                       
+                        <i class="far fa-times"></i>
+                    </button>
                 </div>
             </div>
         </div>
