--- a/Source/Web365/Content/GStoreWeb/scss/index/index.css
+++ b/Source/Web365/Content/GStoreWeb/scss/index/index.css
@@ -150,23 +150,24 @@ li:active > a, li:focus > a {
 }
 
 .title-page {
-  height: 70vh;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.6)), to(rgba(0, 0, 0, 0.6))), url("http://gstorevn.com/wp-content/uploads/2021/02/105-scaled.jpg");
-  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("http://gstorevn.com/wp-content/uploads/2021/02/105-scaled.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  background-attachment: fixed;
-  background-size: cover;
-  color: white;
+    height: 50vh;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.35)), to(rgba(0, 0, 0, 0.35))),url('../../images/img/images/banner-blog.jpeg');
+    background-image: linear-gradient(rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35)), url('../../images/img/images/banner-blog.jpeg');
+    background-position: center -120px;
+    background-repeat: no-repeat;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    background-attachment: fixed;
+    background-size: cover;
+    text-align: center;
+    color: white;
 }
 
 .title-page h1 {
@@ -781,234 +782,279 @@ li:active > a, li:focus > a {
   -webkit-box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.2);
   border-radius: 2px;
-}
+  text-align:center;
 
-@-webkit-keyframes rippleButton {
-  0%, 35% {
-    -webkit-transform: scale(0);
-            transform: scale(0);
-    opacity: 1;
-  }
-  50% {
-    -webkit-transform: scale(1.3);
-            transform: scale(1.3);
-    opacity: .8;
-  }
-  100% {
-    opacity: 0;
-    -webkit-transform: scale(1.5);
-            transform: scale(1.5);
-  }
 }
-
-@keyframes rippleButton {
-  0%, 35% {
-    -webkit-transform: scale(0);
-            transform: scale(0);
-    opacity: 1;
-  }
-  50% {
-    -webkit-transform: scale(1.3);
-            transform: scale(1.3);
-    opacity: .8;
-  }
-  100% {
-    opacity: 0;
-    -webkit-transform: scale(1.5);
-            transform: scale(1.5);
-  }
+.btn__close i {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
-
-@-webkit-keyframes wave {
-  from {
-    -webkit-transform: translateX(0%);
-            transform: translateX(0%);
-  }
-  to {
-    -webkit-transform: translateX(-50%);
-            transform: translateX(-50%);
-  }
-}
-
-@keyframes wave {
-  from {
-    -webkit-transform: translateX(0%);
-            transform: translateX(0%);
-  }
-  to {
-    -webkit-transform: translateX(-50%);
-            transform: translateX(-50%);
-  }
-}
-
-@-webkit-keyframes wave-1 {
-  from {
-    -webkit-transform: translateX(-50%);
-            transform: translateX(-50%);
-  }
-  to {
-    -webkit-transform: translateX(0%);
-            transform: translateX(0%);
-  }
-}
-
-@keyframes wave-1 {
-  from {
-    -webkit-transform: translateX(-50%);
-            transform: translateX(-50%);
-  }
-  to {
-    -webkit-transform: translateX(0%);
-            transform: translateX(0%);
-  }
-}
-
-@media screen and (max-width: 1200px) {
-  .intro__content h1 {
-    font-size: 28px;
-  }
-  .download__container h3 {
-    font-size: 25px;
-  }
-}
-
-@media screen and (max-width: 1050px) {
-  .wave {
-    bottom: -50px;
-  }
-}
-@media screen and (max-width: 1024px) {
-   .download__links {
-        width: 30%;
+    button .btn__close.btn__close-2 i {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     }
-    .introduction__container iframe {
-        height: 460px;
-    }
-}
 
-@media screen and (max-width: 991px) {
-  .row__btn {
-    -webkit-box-pack: justify !important;
-        -ms-flex-pack: justify !important;
+    @-webkit-keyframes rippleButton {
+        0%, 35% {
+            -webkit-transform: scale(0);
+            transform: scale(0);
+            opacity: 1;
+        }
+
+        50% {
+            -webkit-transform: scale(1.3);
+            transform: scale(1.3);
+            opacity: .8;
+        }
+
+        100% {
+            opacity: 0;
+            -webkit-transform: scale(1.5);
+            transform: scale(1.5);
+        }
+    }
+
+    @keyframes rippleButton {
+        0%, 35% {
+            -webkit-transform: scale(0);
+            transform: scale(0);
+            opacity: 1;
+        }
+
+        50% {
+            -webkit-transform: scale(1.3);
+            transform: scale(1.3);
+            opacity: .8;
+        }
+
+        100% {
+            opacity: 0;
+            -webkit-transform: scale(1.5);
+            transform: scale(1.5);
+        }
+    }
+
+    @-webkit-keyframes wave {
+        from {
+            -webkit-transform: translateX(0%);
+            transform: translateX(0%);
+        }
+
+        to {
+            -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
+        }
+    }
+
+    @keyframes wave {
+        from {
+            -webkit-transform: translateX(0%);
+            transform: translateX(0%);
+        }
+
+        to {
+            -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
+        }
+    }
+
+    @-webkit-keyframes wave-1 {
+        from {
+            -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
+        }
+
+        to {
+            -webkit-transform: translateX(0%);
+            transform: translateX(0%);
+        }
+    }
+
+    @keyframes wave-1 {
+        from {
+            -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
+        }
+
+        to {
+            -webkit-transform: translateX(0%);
+            transform: translateX(0%);
+        }
+    }
+
+    @media screen and (max-width: 1200px) {
+        .intro__content h1 {
+            font-size: 28px;
+        }
+
+        .download__container h3 {
+            font-size: 25px;
+        }
+    }
+
+    @media screen and (max-width: 1050px) {
+        .wave {
+            bottom: -50px;
+        }
+    }
+
+    @media screen and (max-width: 1024px) {
+        .download__links {
+            width: 30%;
+        }
+
+        .introduction__container iframe {
+            height: 460px;
+        }
+    }
+
+    @media screen and (max-width: 991px) {
+        .row__btn {
+            -webkit-box-pack: justify !important;
+            -ms-flex-pack: justify !important;
             justify-content: space-between !important;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
-  .row__btn button {
-    margin: 0;
-    padding: 15px 20px !important;
-  }
-  .feature__container h2 {
-    font-size: 25px;
-  }
-  .row .fixed {
-    padding-top: 20px;
-  }
-  .row .fixed:first-child, .row .fixed:nth-child(2) {
-    padding-top: 0;
-  }
-  .btn__row {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
+            display: -webkit-box;
+            display: -ms-flexbox;
+            display: flex;
+        }
+
+            .row__btn button {
+                margin: 0;
+                padding: 15px 20px !important;
+            }
+
+        .feature__container h2 {
+            font-size: 25px;
+        }
+
+        .row .fixed {
+            padding-top: 20px;
+        }
+
+            .row .fixed:first-child, .row .fixed:nth-child(2) {
+                padding-top: 0;
+            }
+
+        .btn__row {
+            display: -webkit-box;
+            display: -ms-flexbox;
+            display: flex;
+            -webkit-box-pack: justify;
+            -ms-flex-pack: justify;
             justify-content: space-between;
-  }
-  .btn__row button {
-    margin: 0;
-    padding: 10px 12px !important;
-    font-size: 13px !important;
-  }
-  .swiper__partner img {
-    width: 100%;
-  }
-    .introduction__button {
-        display: none !important;
-    }
-    
-}
+        }
 
-@media screen and (max-width: 772px) {
-  .wave {
-    bottom: 0;
-  }
-}
+            .btn__row button {
+                margin: 0;
+                padding: 10px 12px !important;
+                font-size: 13px !important;
+            }
 
-@media screen and (max-width: 768px) {
-  .intro__content {
-    text-align: center;
-  }
-  .intro__content p {
-    text-align: center;
-  }
-  .intro__content .row__btn button {
-    padding: 15px 20px;
-  }
-  .row__btn {
-    -ms-flex-pack: distribute !important;
-        justify-content: space-around !important;
-  }
-  .intro__img {
-    padding-top: 50px;
-    display: block;
-    margin: 0 auto;
-  }
-  .feature__container h2 {
-    font-size: 22px;
-  }
-  .content__download {
-    text-align: center;
-  }
-  .btn__row {
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
-  }
-  .introduction__button {
-    display: none !important;
-  }
-    .introduction__container iframe {
-        height: 368px;
-    }
-   
-}
+        .swiper__partner img {
+            width: 100%;
+        }
 
-@media screen and (max-width: 576px) {
-  .img-fluid {
-    width: 50%;
-  }
-  .swiper__partner img {
-    width: 60%;
-  }
-  #features h2 {
-    font-size: 22px;
-  }
-  .row__btn button {
-    padding: 15px !important;
-  }
-  .download__links {
-    width: 80%;
-  }
-  #screen .swiper-slide {
-    background: #fff;
-  }
-  #screen .swiper-slide img {
-    width: 50%;
-    border-radius: 0px;
-  }
-    .introduction__container iframe {
-        height: 225px;
-    }
-}
-
-@media screen and (max-width: 400px) {
-    .btn__row button {
-        padding: 10px !important;
-    }
-    .introduction__container iframe {
-        height: 160px;
+        .introduction__button {
+            display: none !important;
+        }
     }
 
-}
-/*# sourceMappingURL=index.css.map */
+    @media screen and (max-width: 772px) {
+        .wave {
+            bottom: 0;
+        }
+    }
+
+    @media screen and (max-width: 768px) {
+        .intro__content {
+            text-align: center;
+        }
+
+            .intro__content p {
+                text-align: center;
+            }
+
+            .intro__content .row__btn button {
+                padding: 15px 20px;
+            }
+
+        .row__btn {
+            -ms-flex-pack: distribute !important;
+            justify-content: space-around !important;
+        }
+
+        .intro__img {
+            padding-top: 50px;
+            display: block;
+            margin: 0 auto;
+        }
+
+        .feature__container h2 {
+            font-size: 22px;
+        }
+
+        .content__download {
+            text-align: center;
+        }
+
+        .btn__row {
+            -ms-flex-pack: distribute;
+            justify-content: space-around;
+        }
+
+        .introduction__button {
+            display: none !important;
+        }
+
+        .introduction__container iframe {
+            height: 368px;
+        }
+    }
+
+    @media screen and (max-width: 576px) {
+        .img-fluid {
+            width: 50%;
+        }
+
+        .swiper__partner img {
+            width: 60%;
+        }
+
+        #features h2 {
+            font-size: 22px;
+        }
+
+        .row__btn button {
+            padding: 15px !important;
+        }
+
+        .download__links {
+            width: 80%;
+        }
+
+        #screen .swiper-slide {
+            background: #fff;
+        }
+
+            #screen .swiper-slide img {
+                width: 50%;
+                border-radius: 0px;
+            }
+
+        .introduction__container iframe {
+            height: 225px;
+        }
+    }
+
+    @media screen and (max-width: 400px) {
+        .btn__row button {
+            padding: 10px !important;
+        }
+
+        .introduction__container iframe {
+            height: 160px;
+        }
+    }
+    /*# sourceMappingURL=index.css.map */
