--- a/Source/Web365/Content/GStoreWeb/scss/introduction/Subscription.module.css
+++ b/Source/Web365/Content/GStoreWeb/scss/introduction/Subscription.module.css
@@ -39,23 +39,23 @@
 }
 
 .title-page {
-  height: 50vh;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.35)), to(rgba(0, 0, 0, 0.35))), url("http://gstorevn.com/wp-content/uploads/2021/02/105-scaled.jpg");
-  background-image: linear-gradient(rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35)), url("http://gstorevn.com/wp-content/uploads/2021/02/105-scaled.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  background-attachment: fixed;
-  background-size: cover;
-  color: white;
+    height: 50vh;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.35)), to(rgba(0, 0, 0, 0.35))),url('../../images/img/images/banner-blog.jpeg');
+    background-image: linear-gradient(rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35)), url('../../images/img/images/banner-blog.jpeg');
+    background-position: center -120px;
+    background-repeat: no-repeat;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    background-attachment: fixed;
+    background-size: cover;
+    color: white;
 }
 
 .title-page h1 {
@@ -66,7 +66,6 @@
 .row {
   -webkit-box-align: center;
       -ms-flex-align: center;
-          align-items: center;
 }
 
 .row .col-button {
