--- a/Source/Web365/Views/Shared/_Layout.cshtml
+++ b/Source/Web365/Views/Shared/_Layout.cshtml
@@ -23,10 +23,8 @@
     
     <meta property="article:author" content="@ResourceLanguage.HomeTitle" />
     <meta property="article:publisher" content="@ResourceLanguage.HomeTitle" />
-    <meta property="og:image" content="https://gstorevn.com/wp-content/uploads/2021/02/Untitled-12.png" />
+    <meta property="og:image" content="~/Content/GStoreWeb/images/img/images/Logo-SEO.png" />
     <title>@Html.Raw(ViewBag.Title)</title>
-
-
 
 
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
