--- a/Source/Web365/Content/GStoreWeb/scss/application/application.css
+++ b/Source/Web365/Content/GStoreWeb/scss/application/application.css
@@ -1,4 +1,4 @@
-.container {
+﻿.container {
   margin-top: 50px;
 }
 
@@ -90,6 +90,10 @@
 .row .btn__row button i {
   margin-right: 10px;
 }
+
+/*css button tải app*/
+
+
 
 @media screen and (max-width: 1024px) {
   .img {
