--- a/Source/Web365/Views/Article/Ungdung.cshtml
+++ b/Source/Web365/Views/Article/Ungdung.cshtml
@@ -9,15 +9,91 @@
     ViewBag.Image = (Model.Picture != null ? Web365Utility.GetPathPicture(Model.Picture.FileName) : "");
     Layout = "~/Views/Shared/_LayoutTrangTrong.cshtml";
     ViewBag.Title = "Ứng dụng";
+
     <link href="~/Content/GStoreWeb/scss/application/application.css" rel="stylesheet" />
 }
 
+<!--<div class="container-fluid title-page">
+    <h1>@Model.Title</h1>
+</div>-->
+<!-- application -->
+<!--<div class="container">
+    <div class="wrapper">
+        @Html.Raw(Model.Detail)
+    </div>
+</div>-->
 <div class="container-fluid title-page">
     <h1>@Model.Title</h1>
 </div>
-<!-- application -->
+
 <div class="container">
     <div class="wrapper">
-        @Html.Raw(Model.Detail)
+        <div class="wrapper">
+            <ul>
+                <li>
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7">
+                            <h4>Bước 1:</h4>
+                               <br />                    
+                            <p>Tải ứng dụng G-STORE từ AppStore (đối với IOS) và CH-Play (đối với Android). Sau khi cửa sổ hiện ra, quý khách hàng nhập số điện thoại để tạo tài khoản trên ứng dụng G-STORE.</p>
+                            <div class="btn__row" style="margin-left: 22px; margin-top:30px;">
+                                <a href="https://apps.apple.com/vn/app/g-store/id1537350489">
+                                    <button class="btn__dl" id="1"><i class="fab fa-apple"></i> Tải trên appstore</button>
+                                </a>
+                                <a href="https://play.google.com/store/apps/details?id=com.company.gstore_app">
+                                    <button class="btn__dl btn__dl-2" id="2"><i class="fab fa-android"></i> Tải trên CHPLAY</button>
+                                </a>
+                            </div>
+                        </div>                       
+                       <div class="img col-xs-6 col-sm-6 col-md-3 col-lg-3"><img src="/Content/GStoreWeb/images/img/images/ScreenApp/Man-hinh-ung-dung-1.PNG" /></div>
+                    </div>
+                </li>
+                <li>
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7">
+                            <h4>Bước 2:</h4>
+                            <br />
+                            <p>Quý khách hàng nhập Số điện thoại và ấn tiếp tục. Hệ thống sẽ gửi về 1 mã OTP gồm 06 chữ số. Nhập mã OTP và ấn Đăng nhập</p>
+                        </div>
+
+                        <div class="img col-xs-6 col-sm-6 col-md-3 col-lg-3"><img src="/Content/GStoreWeb/images/img/images/ScreenApp/Man-hinh-ung-dung-2.PNG" /></div>
+                    </div>
+                </li>
+                <li>
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7">
+                            <h4>Bước 3:</h4>
+                            <br />
+                            <p>Cập nhật ảnh đại diện và thông tin cá nhân.</p>
+                        </div>
+
+                        <div class="img col-xs-6 col-sm-6 col-md-3 col-lg-3"><img src="/Content/GStoreWeb/images/img/images/ScreenApp/Huong-dan-su-dung-buoc-3.PNG" /></div>
+                    </div>
+                </li>
+                <li>
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7">
+                            <h4>Bước 4:</h4>
+                            <br />
+                            <p>Vào Sổ địa chỉ - Cá nhân, chọn Thêm địa chỉ mới để tạo địa chỉ mặc định của Shop</p>
+                        </div>
+
+                        <div class="img col-xs-6 col-sm-6 col-md-3 col-lg-3"><img src="/Content/GStoreWeb/images/img/images/ScreenApp/huong-dan-su-dung-buoc-4.PNG" /></div>
+                    </div>
+                </li>
+                <li>
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7">
+                            <h4>Bước 5:</h4>
+                            <br />
+                            <p>Quay lại Trang chủ và trải nghiệm các tính năng của App G-Store</p>
+                        </div>
+
+                        <div class="img col-xs-6 col-sm-6 col-md-3 col-lg-3"><img src="/Content/GStoreWeb/images/img/images/ScreenApp/huong-dan-su-dung-buoc-5.PNG" /></div>
+                    </div>
+                </li>
+            </ul>
+        </div>
+
     </div>
 </div>
