--- a/Source/Web365/Views/Article/Gioithieucongty.cshtml
+++ b/Source/Web365/Views/Article/Gioithieucongty.cshtml
@@ -19,9 +19,8 @@
 <div class="container-fluid" id="introduction">
     <div class="container">
         <div data-aos="fade-up">
-            <h2>@Model.Title 12312312</h2>
+            <h2>@Model.Summary</h2>
             @Html.Raw(Model.Detail)
         </div>
     </div>
 </div>
-<script src="~/Content/GStoreWeb/js/button.js"></script>
