--- a/Source/Web365/Content/GStoreWeb/scss/index/index.css
+++ b/Source/Web365/Content/GStoreWeb/scss/index/index.css
@@ -1011,6 +1011,10 @@ li:active > a, li:focus > a {
         .introduction__container iframe {
             height: 368px;
         }
+        .title-page {
+            background-position: center -200px;
+        }
+
     }
 
     @media screen and (max-width: 576px) {
