--- a/Source/Web365/Content/GStoreWeb/scss/blog/blog.css
+++ b/Source/Web365/Content/GStoreWeb/scss/blog/blog.css
@@ -1,16 +1,34 @@
 body {
   font-family: 'Quicksand', sans-serif !important;
 }
-
-.container__posts {
-  padding: 50px 15px;
+.timesh {
+    display: flex;
+    justify-content:space-between;
 }
+.st-btn.st-last.st-remove-label {
+    display: inline-block !important;
+}
+#st-1.st-has-labels .st-btn.st-remove-label > span {
+    display: inline-block !important;
+}
+@media screen and (max-width: 576px) {
+    #st-1.st-has-labels .st-btn.st-remove-label > span {
+        display: none !important;
+    }
+    #st-1 .st-btn > span {
+       display: none !important;
+    }
+    #st-1.st-has-labels .st-btn {
+        min-width: 50px !important;
+    }
+ } 
+   
 
 .layout__container {
-  -webkit-box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
-          box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
-  padding: 20px;
-  border-radius: 18px;
+    -webkit-box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
+    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
+    padding: 20px;
+    border-radius: 18px;
 }
 
 .layout__container .title__box__nearest {
@@ -127,7 +145,7 @@ body {
   text-overflow: ellipsis;
   display: -webkit-box;
   -webkit-line-clamp: 2;
-  /* number of lines to show */
+   number of lines to show 
   -webkit-box-orient: vertical;
   font-size: 14px;
   text-transform: uppercase;
@@ -156,4 +174,4 @@ body {
 .near__post__component:not(:last-child) {
   border-bottom: 1px solid #ddd;
 }
-/*# sourceMappingURL=blog.css.map */
+/*/*# sourceMappingURL=blog.css.map */
