--- a/Source/Web365/Views/Article/NewsDetail.cshtml
+++ b/Source/Web365/Views/Article/NewsDetail.cshtml
@@ -20,12 +20,15 @@
 
 
 <div class="container row__up" id="features">
+    <div class="timesh">
+            <p class="bn88" style="margin-bottom: 30px">
+                <i class="far fa-calendar-alt"></i> @Model.DateCreated.Value.ToString("dd/MM/yyyy")
 
-    <div class="sharethis-inline-share-buttons"></div>
-    <p class="blog__date" style="margin-bottom: 30px">
-        <i class="far fa-calendar-alt"></i> @Model.DateCreated.Value.ToString("dd/MM/yyyy")
-    </p>
+            </p>
 
+        
+        <div class="sharethis-inline-share-buttons timeshbutton"></div>
+    </div>
     <div class="row row__blog">
         <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8" style="text-align:justify">
             <img style="width: auto;max-width: 100%;" src="@(Model.Picture != null ? Web365Utility.GetPathPicture(Model.Picture.FileName) : "")" alt="@(Model.Picture != null ? Model.Picture.Alt : "")">
