--- a/Source/Web365/Views/Article/Search.cshtml
+++ b/Source/Web365/Views/Article/Search.cshtml
@@ -20,13 +20,14 @@
     @if (Model != null && Model.List != null && Model.List.Any())
     {
         foreach (var item in Model.List)
-        {
-            <div class="sharethis-inline-share-buttons"></div>
-            <p class="blog__date" style="margin-bottom: 30px">
-                <i class="far fa-calendar-alt"></i>@item.DateCreated.Value.ToString("dd/MM/yyyy")
-            </p>
-
-            <div class="row row__blog"style="margin-bottom: 50px">
+        {           
+            <div class="timesh">
+                <p class="bn88" style="margin-bottom: 30px">
+                    <i class="far fa-calendar-alt"></i> @item.DateCreated.Value.ToString("dd/MM/yyyy")
+                </p>
+                <div class="sharethis-inline-share-buttons timeshbutton"></div>
+            </div>
+            <div class="row row__blog" style="margin-bottom: 50px">
                 <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
                     <h1><a href="@HiconHtmlHelper.GetHyperLinkWithLanguage(ViewContext.RouteData, item.ArticleType.NameAscii + "/" + item.TitleAscii)" title="@item.Title">@item.Title</a></h1>
                     <img src="@Web365Utility.GetPathPicture(item.Picture.FileName)" title="@item.Picture.Name">
@@ -71,6 +72,6 @@
                 <!-- get posts -->
                 @Html.Action("RightBarInNews", new { typeId = (int)StaticEnum.ArticleType.News })
             </div>
-            </div>
-            }
-   </div>
+        </div>
+    }
+</div>
